[issue] dropdown-menu width is too large

--- a/userProfile/css/userProfile.css
+++ b/userProfile/css/userProfile.css
@@ -81,6 +81,10 @@ h1 span {
     font-size: small;
 }
 
+/*.dropdown-menu {
+    min-width: 8px;
+}*/
+
 /* /Navbar */
 
 /* Carousel */
